# hikvision-viewer

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  config.example.yaml  hikvision-viewer.desktop  hikvision-viewer.spec  main.py  pyi_rth_mpv.py  pyproject.toml  requirements.txt
aur/: .SRCINFO  PKGBUILD  hikvision-viewer.install
debian/: changelog  control  copyright  rules
hikvision_viewer/: __main__.py  config_editor.py  config_loader.py  env_secure.py  hikvision_rtsp.py  logging_utils.py  main.py
scripts/: appimage-bundle.sh  appimage-in-docker.sh  build-appimage.sh  build-deb.sh  package-release.sh  release-github-aur.sh
